kube/mainnet/mainnet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainnet-ingress
  namespace: mainnet
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "mainnet-ingress-static-ip"
    networking.gke.io/managed-certificates: "mainnet-cert"
spec:
  ingressClassName: gce 
  rules:
  - host: main-faucet.rooch.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mainnet-faucet-service
            port: 
              number: 6868
---
apiVersion: v1
kind: Service
metadata:
  name: mainnet-faucet-service
  namespace: mainnet
spec:
  type: NodePort
  ports:
    - port: 6868
      targetPort: 6868
      protocol: TCP
      name: http
  selector:
    app: mainnet-faucet
